# PaintDL

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CanvasInfoPanel.cpp  CanvasInfoPanel.h  DrawingCanvas.cpp  DrawingCanvas.h  DrawingDocument.cpp  DrawingDocument.h  DrawingView.cpp  DrawingView.h  MyApp.h  StrokeSettings.h  main.cpp  xmlSerializer.h
src/Assets/: UML.dio
src/Canvas/: CanvasObject.cpp  CanvasObject.h  DrawingCanvas.cpp  DrawingCanvas.h  DrawingVisistor.h  ObjectSpace.cpp  ObjectSpace.h  SelectionBox.cpp  SelectionBox.h  ShapeCreator.cpp  ShapeCreator.h
src/Command/: AddCommand.cpp  AddCommand.h  DeleteCommand.cpp  DeleteCommand.h  RotateCommand.cpp  RotateCommand.h  SelectionCommand.cpp  SelectionCommand.h  ShapeCommand.cpp  ShapeCommand.h
src/Gradient/: GradientBrush.cpp  GradientBrush.h  gradient.cpp  gradient.h  gradientdlg.cpp  gradientdlg.h
src/Helper/: StreamUtils.h  Visistor.h
src/Menu/: BrushToolMenu.cpp  BrushToolMenu.h  ColorMenu.cpp  ColorMenu.h  ColorPane.cpp  ColorPane.h  FontMenu.cpp  FontMenu.h  HistoryPane.cpp  HistoryPane.h  HistoryPanel.cpp  HistoryPanel.h  ImageMenu.cpp  ImageMenu.h  MenuBar.cpp  MenuBar.h  MenuTemplate.cpp  MenuTemplate.h  MoveToolMenu.cpp  MoveToolMenu.h  RoundedButton.cpp  RoundedButton.h  SelectableMenu.cpp  SelectableMenu.h  SelectablePane.cpp  SelectablePane.h  SelectionToolMenu.cpp  SelectionToolMenu.h  ShapeMenu.cpp  ShapeMenu.h  ShapePane.cpp  ShapePane.h  ShapeToolMenu.cpp  ShapeToolMenu.h  SizeMenu.cpp  SizeMenu.h  SizePane.cpp  SizePane.h  TextToolMenu.cpp  TextToolMenu.h  (+8 more)
src/Shape/: Circle.h  Diamond.h  ITriangle.h  Path.h  RTriangle.h  Rect.h  Shape.h  ShapeFactory.h  ShapeUtils.h  Text.h
src/Transform/: Conversion.h  Transformation.h
